# py-mdmodels

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
examples/basic/: BasicExample.ipynb  model.jl  model.md  model.rs  model.xsd  uml_diagram.md
examples/graph/: Neo4JExample.ipynb  model.md  startn4j.sh
examples/llm/: MetadataExtraction.ipynb  query.md
examples/llm/answering/: QuestionAnswering.ipynb  dataset.json
examples/llm/database/: README.md  create.py  query.py  test.db
examples/llm/embedding/: embeddings.npy  (+3 more)
examples/sql/: SQLDatabaseExample.ipynb  model.md  test.db
mdmodels/: __init__.py  adder_method.py  create.py  datamodel.py  generate.py  git_utils.py  library.py  llm.py  prompts.py  reference.py
mdmodels/graph/: relation.py
mdmodels/llm/: __init__.py  embed.py  fetcher.py  handler.py  plot.py  prompts.py  response.py  table.py  utils.py  web.py
mdmodels/sql/: __init__.py  base.py  create.py  insert_nested.py
mdmodels/units/: annotation.py  converter.py  mappings.py  unit_definition.py
tests/fixtures/: content.json  expected_json.json  expected_units.json  expected_units_complex.json  expected_wrapped_xml.xml  expected_xml.xml  model.md  model_database.md  model_graph.md  model_json_schema.json  model_multiple_types.md  model_recursion.md  model_units.md  model_wrapped_xml.md
tests/integration/: test_conversion.py  test_db.py  test_from_json_schema.py  test_graph.py  test_llm.py  test_parse.py
tests/unit/: test_create.py  test_datamodel.py  test_git_utils.py  test_unit_definition.py
(+8 files in other folders)
