[tool.poetry]
name = "mdmodels"
version = "0.1.0"
description = "Python package for the MDModels Rust crate"
authors = ["Jan Range <range.jan@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic-xml = "^2.12.1"
bigtree = "^0.21.1"
validators = "^0.34.0"
httpx = "^0.27.2"

[tool.poetry.group.chat.dependencies]
instructor = "^1.6.2"
openai = "^1.52.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
