[tool.poetry]
name = "mdmodels"
version = "0.1.0"
description = "Python package for the MDModels Rust crate"
authors = ["Jan Range <range.jan@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mdmodels-core = "^0.1.3"
pydantic-xml = "^2.12.1"
bigtree = "^0.21.1"
validators = "^0.34.0"
httpx = "^0.27.2"
python-jsonpath = "^1.2.0"
pandas = "^2.2.3"
rich = "^13.9.4"
nest-asyncio = "^1.6.0"
astropy = "^6"
dotted-dict = "^1.1.3"

[tool.poetry.group.chat.dependencies]
instructor = "^1.6.2"
openai = "^1.52.0"
tabulate = "0.9.0"

[tool.poetry.group.graph.dependencies]
neomodel = "^5.4.0"

[tool.poetry.group.sql.dependencies]
sqlmodel = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
